force-app/main/default/objects/Reservation_Segment__c/Reservation_Segment__c.object-meta.xml
<CustomObject>
    <label>Reservation Segment</label>
    <pluralLabel>Reservation Segments</pluralLabel>
    <description>Individual flight legs within a customer reservation, linking specific flights to travel dates and seat assignments</description>
    <nameField>
        <label>Segment Number</label>
        <type>AutoNumber</type>
        <displayFormat>RS-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>