force-app/main/default/objects/Reservation_Segment__c/fields/Arrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Arrival_DateTime__c</fullName>
    <label>Arrival Date/Time</label>
    <description>The actual scheduled arrival date and time for this segment</description>
    <inlineHelpText>Enter the complete arrival date and time</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>