force-app/main/default/objects/Reservation_Segment__c/fields/Departure_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Departure_DateTime__c</fullName>
    <label>Departure Date/Time</label>
    <description>The actual scheduled departure date and time for this segment</description>
    <inlineHelpText>Enter the complete departure date and time</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>