force-app/main/default/objects/Reservation_Segment__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <label>Flight</label>
    <description>The flight from the master schedule that this segment is based on</description>
    <inlineHelpText>Select the flight from the master schedule</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Reservation Segments</relationshipLabel>
    <relationshipName>Reservation_Segments</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>