force-app/main/default/objects/Reservation_Segment__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <label>Reservation</label>
    <description>The parent reservation that this segment belongs to</description>
    <inlineHelpText>Select the reservation that this flight segment is part of</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Reservation Segments</relationshipLabel>
    <relationshipName>Reservation_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>