force-app/main/default/objects/Reservation_Segment__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <label>Seat Number</label>
    <description>The assigned seat number for this segment</description>
    <inlineHelpText>Enter the seat assignment (e.g., 12A)</inlineHelpText>
    <type>Text</type>
    <length>5</length>
</CustomField>