force-app/main/default/objects/Reservation_Segment__c/fields/Segment_Status__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status__c</fullName>
    <label>Segment Status</label>
    <description>Current status of this flight segment</description>
    <inlineHelpText>Select the current status of this segment</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Boarded</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>